Add provider and feather icons dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  provider: ^5.0.0
+  flutter_feather_icons:
+    git:
+      url: https://github.com/NikSWE/flutter_feather_icons
 
 dev_dependencies:
   flutter_test:
