--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_feather_icons:
     git:
       url: https://github.com/NikSWE/flutter_feather_icons
+  visibility_detector: ^0.2.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
