--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
 
       # Build part files
       - name: Build part files
-        run: pub run easy_localization:generate -S assets/translations -O lib/presentation/generated
+        run: flutter pub run easy_localization:generate -S assets/translations -O lib/presentation/generated
 
       # Analyze
       - name: Analyze
