--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
       url: https://github.com/NikSWE/flutter_feather_icons
   visibility_detector: ^0.2.0-nullsafety.1
   easy_localization: ^3.0.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
