--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ flutter:
     - assets/images/tasky/home_page.png
     - assets/images/tasky/edit_page.png
     - assets/images/tasky/comments_detail.png
+    - assets/images/balance/img_1.webp
+    - assets/images/balance/img_2.webp
+    - assets/images/balance/img_3.webp
+    - assets/images/petify/img_1.webp
+    - assets/images/petify/img_2.webp
+    - assets/images/petify/img_3.webp
 
   fonts:
     - family: Rubik
